--- a/src/components/Contacts.module.css
+++ b/src/components/Contacts.module.css
@@ -1,11 +1,12 @@
 .contacts {
     margin: 0 auto;
-    padding: 20px;
-    min-width: 450px;
+    padding: 100px;
+    /* max-width: 300px; */
+    height: 100%;
     background: linear-gradient(to bottom, #2a57ec6b, #b6ec427a);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+    /* background-repeat: no-repeat; */
+    /* background-attachment: fixed; */
+    /* background-size: cover; */
 
 }
 
