--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import-normalize; /* bring in normalize.css styles */
-
+/* @import-normalize; bring in normalize.css styles */
+@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
