--- a/src/components/Contacts.module.css
+++ b/src/components/Contacts.module.css
@@ -1,9 +1,14 @@
 .contacts {
   margin: 0 auto;
+  padding-top: 25px;
+  width: 500px;
+  min-height: 550px;
   background: linear-gradient(to bottom, #2a57ec6b, #b6ec427a);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  border: 1px solid rgb(3, 42, 20);
+  border-radius: 12px;
 }
 
 .title {
